[gd_scene load_steps=23 format=3 uid="uid://v61tmokwx4j3"]

[ext_resource type="Script" path="res://Nodes/Enemies/enemy.gd" id="1_ayfh5"]
[ext_resource type="Texture2D" uid="uid://7u6cre6ord4d" path="res://Sprites/SkullEnemySpriteSheet.png" id="2_p61ue"]
[ext_resource type="Script" path="res://Scripts/hurtbox.gd" id="3_8opig"]
[ext_resource type="Script" path="res://Scripts/hitbox.gd" id="4_gwoop"]
[ext_resource type="Script" path="res://Scripts/ClampPosition.gd" id="5_7gvkx"]
[ext_resource type="Script" path="res://Scripts/health.gd" id="6_606b2"]
[ext_resource type="AudioStream" uid="uid://djxisg5sn3bpi" path="res://SoundEffects/SkullShoot.wav" id="7_b7nl5"]
[ext_resource type="Script" path="res://Scripts/hurt.gd" id="7_i4d3w"]
[ext_resource type="Script" path="res://Scripts/move.gd" id="8_1ah5k"]
[ext_resource type="Script" path="res://Nodes/Enemies/Shoot.gd" id="9_iepme"]
[ext_resource type="Script" path="res://Scripts/shakeEffect.gd" id="10_xvpqu"]
[ext_resource type="Script" path="res://Scripts/Flash.gd" id="11_am08u"]
[ext_resource type="Script" path="res://Scripts/Death.gd" id="12_w8mpj"]
[ext_resource type="Script" path="res://Nodes/Enemies/spawner.gd" id="13_hqsg8"]
[ext_resource type="PackedScene" uid="uid://ccbckcr3wa1y6" path="res://effects/death_effect.tscn" id="14_5vwnu"]
[ext_resource type="AudioStream" uid="uid://6j1w4clrucph" path="res://SoundEffects/Damage.wav" id="15_qqnyv"]
[ext_resource type="Script" path="res://Scripts/audioManagerNode.gd" id="16_aps07"]

[sub_resource type="Animation" id="Animation_c34cv"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_haolb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h3v7m"]
_data = {
"Idle": SubResource("Animation_c34cv"),
"RESET": SubResource("Animation_haolb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nl8jk"]
radius = 32.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_snnc2"]
radius = 32.0
height = 80.0

[node name="SkullEnemy" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ayfh5")

[node name="PlayerTracker" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="ShootingPosition" type="Marker2D" parent="."]
position = Vector2(0, 24)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_p61ue")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_h3v7m")
}
autoplay = "Idle"

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0
script = ExtResource("3_8opig")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_nl8jk")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
script = ExtResource("4_gwoop")
damage = 50.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_snnc2")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-9.53674e-07, 2.86102e-06)
scale = Vector2(4, 4)
enable_node_path = NodePath("../Components/Move")

[node name="DamageSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_qqnyv")
bus = &"SoundEffect"
script = ExtResource("16_aps07")

[node name="SkullShootSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_b7nl5")
bus = &"SoundEffect"
script = ExtResource("16_aps07")
pitch_min = 0.5
pitch_max = 0.75

[node name="Components" type="Node" parent="."]

[node name="PositionClamp" type="Node" parent="Components" node_paths=PackedStringArray("player")]
script = ExtResource("5_7gvkx")
player = NodePath("../..")
verticalClamp = true

[node name="Health" type="Node" parent="Components"]
script = ExtResource("6_606b2")
health = 5

[node name="Hurt" type="Node" parent="Components" node_paths=PackedStringArray("health", "hurtbox")]
script = ExtResource("7_i4d3w")
health = NodePath("../Health")
hurtbox = NodePath("../../Hurtbox")

[node name="Move" type="Node" parent="Components" node_paths=PackedStringArray("object")]
script = ExtResource("8_1ah5k")
object = NodePath("../..")
velocity = Vector2(-500, 0)
skullMovement = true

[node name="Shoot" type="Node2D" parent="Components"]
script = ExtResource("9_iepme")

[node name="Shake" type="Node" parent="Components" node_paths=PackedStringArray("node")]
script = ExtResource("10_xvpqu")
node = NodePath("../../Sprite2D")

[node name="Flash" type="Node" parent="Components" node_paths=PackedStringArray("sprite")]
script = ExtResource("11_am08u")
sprite = NodePath("../../Sprite2D")

[node name="Death" type="Node" parent="Components" node_paths=PackedStringArray("actor", "health", "death_effect_spawner")]
script = ExtResource("12_w8mpj")
actor = NodePath("../../Sprite2D")
health = NodePath("../Health")
death_effect_spawner = NodePath("../SpawnerNode")

[node name="SpawnerNode" type="Node2D" parent="Components"]
script = ExtResource("13_hqsg8")
scene = ExtResource("14_5vwnu")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.75
one_shot = true

[node name="AlertTimer" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="isMoving" from="Components/Move" to="Components/Shoot" method="_on_move_is_moving"]
[connection signal="timeout" from="ShootTimer" to="Components/Shoot" method="_on_shoot_timer_timeout"]
